# material

./: .gitmodules  CMakeLists.txt
material/: CMakeLists.txt
material/include/material/: bulk_material_asset.h  indexed_material_asset.h  material_asset.h
material/include/material/internal/: module.h
material/source/: bulk_material_asset.c  indexed_material_asset.c  material_asset.c
